✨views > Add button infos

--- a/includes/views/layouts/sidebar.twig
+++ b/includes/views/layouts/sidebar.twig
@@ -13,7 +13,7 @@
         <h3 class="chapter-about-title js-title3 hidden">Coopération</h3>
     </div>
     <div class="chapter-about-text js-text1">
-        <p class="chapter-about-blabla">Nous sommes des étudiants en 2ème année, à HETIC, école de l’Internet. Bla bla bla balabalalalalaalalalalalla allaalallalalalalalalalalalalalalala defzfzfzfzfzf fzfezfezfzffd dsqdqdqdqd dqdqdq za.  a a azaazaaaa fsdfsfs </p>
+        <p class="chapter-about-blabla">Un groupe d’étudiants du programme Grande École d’Hétic. Nous avons réalisé ce site dans le cadre d’une semaine intensive dont le but était de produire un objet digital constituant un web-documentaire.</p>
         <div class="about-undertitle-container">
             <h4 class="about-undertitle">Conception et réalisation</h4>
             Alain Cao Van Truong <br>
@@ -43,30 +43,25 @@
             <h4 class="about-undertitle">La gestion de l'eau dans nos sociétés</h4>
         </div>
         <p class="chapter-about-blabla">Le projet a été préparé dans le cadre d’une semaine intensive durant le mois de Juin de l’année 2018.</p>
-        <p class="chapter-about-blabla">Hello le monde ici la france, lorem lorem lorem lorem. Coucou coucou coucou coucou dsdsdsdsdsdsddsdsd
-            sdsdsdsd hdjsqdhqjdhq qshjhsjhsq shjqhjhs qhsjqhsjhssqhqshsjsqjsqhsqj sjsqhsqjqhsjh qshjqshsqjshjshqjshjqshsqjhqsj sqhjqshqsjhsjs yeuayruayrua ryuazyruayrazuaryazu ppppppeeeeeaaaaaa</p>
-        <p class="chapter-about-blabla">Hello le monde ici la france, lorem lorem lorem lorem. Coucou coucou coucou coucou dsdsdsdsdsdsddsdsd
-            sdsdsdsd hdjsqdhqjdhq qshjhsjhsq shjqhjhs qhsjqhsjhssqhqshsjsqjsqhsqj sjsqhsqjqhsjh qshjqshsqjshjshqjshjqshsqjhqsj sqhjqshqsjhsjs yeuayruayrua ryuazyruayrazuaryazu ppppppeeeeeaaaaaa
-            Hello le monde ici la france, lorem lorem lorem lorem. Coucou coucou coucou coucou dsdsdsdsdsdsddsdsd
-            sdsdsdsd hdjsqdhqjdhq qshjhsjhsq shjqhjhs qhsjqhsjhssqhqshsjsqjsqhsqj sjsqhsqjqhsjh qshjqshsqjshjshqjshjqshsqjhqsj sqhjqshqsjhsjs yeuayruayrua ryuazyruayrazuaryazu ppppppeeeeeaaaaaa
-            </p>
+        <p class="chapter-about-blabla">Le sujet de l’eau est crucial pour l’avenir de notre société et sa pérennité à long et très long terme. Nous voulions aborder ce sujet pour en avoir une meilleure compréhension, d’une part, et d’autre part de donner de matière à réfléchir aux visiteurs du site, et apporter notre contribution à cette prise de conscience collective nécessaire.</p>
+        <p class="chapter-about-blabla">Pour approfondir le sujet de la question environnementale et notamment celui du partage de l’eau, nous conseillons vivement ce documentaire : https://www.youtube.com/watch?v=Hs-M1vgI_4A<br>
+        </p>
     </div>
     <div class="chapter-about-text js-text3 hidden">
-        <p class="chapter-about-blabla">Nous remercions les organismes suivants d’avoir mis leurs collections à notre disposition : </p>
+        <p class="chapter-about-blabla">Plusieurs associations et ONG proposent de multiples campagne de dons pour l’eau, vous pouvez participer ici :</p>
         <div class="about-undertitle-container">
-            <h4 class="about-undertitle">Collections audiovisuelles</h4>
-            Fragments du film...
+            https://humanappeal.fr/nos-actions/eau-potable/
         </div>
         <div class="about-undertitle-container">
-            <h4 class="about-undertitle">Collections audio</h4>
-            Fragments du film...
+            https://muslimhands.fr/don/fonds/fonds-pour-l-eau
         </div>
         <div class="about-undertitle-container">
-            <h4 class="about-undertitle">Collections iconographiques</h4>
-            Fragments du film...
+            https://life-ong.org/eau/
         </div><div class="about-undertitle-container">
-            <h4 class="about-undertitle">Collections journalistiques</h4>
-            Fragments du film...
+            https://www.unicef.fr/dossier/eau-et-assainissement
+            N’hésitez pas à partager ce webdocumentaire.<br>
+            Merci pour votre visite.
+            <h4 class="about-undertitle">Nous n’avons pas acquis les droits des sources. Ce projet a été réalisé dans un cadre pédagogique.</h4>
         </div>
     </div>
     <button class="about-close-button">&#x2715;</button>
