--- a/includes/views/modules/text.twig
+++ b/includes/views/modules/text.twig
@@ -1,7 +1,7 @@
 <div class="slide3-container2">
     <div class="slide3-container2-title">{{ _slide.title }}<br></div>
     <div class="slide3-container2-label">{{ _slide.label }}<br></div>
-    <div class="slide3-container2-text">{{ _slide.text }}<br></div>
+    <div class="slide3-container2-text">{{ _slide.text | raw }}<br></div>
     <div class="slide3-container2-text-border"></div>
     {% if _slide.button is defined %}
         <button class="slide3-button">{{ _slide.button }}</button>
