--- a/includes/views/modules/threeCircles.twig
+++ b/includes/views/modules/threeCircles.twig
@@ -1,12 +1,15 @@
-<div class="chapter2-container-circles">
-    <div class="chapter2-line1"></div>
-    <div class="chapter2-line2"></div>
-    <div class="chapter2-circle1"></div>
-    <div class="chapter2-circle2"></div>
-    <div class="chapter2-circle3"></div>
-    <div class="chapter2-circle4"></div>
-    <p class="circle-text">
-        <span class="circle-number">70%</span> <br>
-        Agriculture
-    </p>
-</div>
+{% for _circle in _slide.circles %}
+    <div class="container-circle container-{{ loop.index }}">
+        <figure class="chart chart-{{ loop.index }}">
+            <svg>
+                <circle class="circle-around"/>
+                <circle class="circle-background"/>
+                <circle class="circle-foreground"/>
+            </svg>
+            <figcaption></figcaption>
+            <span class="label">{{ _circle.text }}</span>
+        </figure>
+        <span class="prev {{ loop.first ? 'hidden' }}"></span>
+        <span class="next {{ loop.last ? 'hidden' }}"></span>
+    </div>
+{% endfor %}
