✨ scripts > Build videos and map slides

--- a/includes/views/modules/audio.twig
+++ b/includes/views/modules/audio.twig
@@ -1,11 +1,18 @@
-<div  class="slide3-container1">
-    <img class="slide3-container1-title-background" src="{{ base_url() }}/assets/images/dirigeants.png" alt="background">
-    <div class="slide3-container1-subContainer1">
-        <div class="slide3-container1-subContainer1-title">{{ _slide.title }}<br></div>
-        <div class="slide3-container1-subContainer1-text">{{ _slide.text | raw }}<br></div>
-        <div class="slide3-container1-subContainer1-audio"></div>
-    </div>
-    <button class="slide4-button">Play</button>
+<div class="background"></div>
+
+<div class="button paused">
+    <span class="play">&#9654;</span>
+    <span class="pause">&#10073; &#10073;</span>
 </div>
 
-<audio src="{{ base_url() }}/assets/audio/audio1.mp3" class="slide4-audio"></audio>
+<div class="bar">
+    <div class="data">
+        <div class="title">{{ _slide.title }}</div>
+        <div class="text">{{ _slide.text | raw }}</div>
+    </div>
+    <div class="fill"></div>
+    <div class="time start">0:00</div>
+    <div class="time end">0:00</div>
+</div>
+
+<audio src="{{ base_url() }}/assets/audio/audio1.mp3"/>
